examples/test/testpolicy4949.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4949
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key40: value46
      key3: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value18
          key13: value5
          key49: value36
      podSelector:
        matchLabels:
          key32: value19
